[FIX] 로그아웃이 refresh토큰이 없어도 가능하도록 수정